php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #30442 segmentation fault when parsing request parameters
Submitted: 2004-10-15 10:04 UTC Modified: 2004-10-18 17:08 UTC
Votes:1
Avg. Score:4.0 ± 0.0
Reproduced:1 of 1 (100.0%)
Same Version:0 (0.0%)
Same OS:0 (0.0%)
From: camka at email dot ee Assigned:
Status: Closed Package: Reproducible crash
PHP Version: 4.3.9 OS: Linux
Private report: No CVE-ID: None
 [2004-10-15 10:04 UTC] camka at email dot ee
Description:
------------
tested on versions 4.3.9 and 5.0.2 

when requesting any php script with parameter with open square bracket [][

http://www.somesite.com/somephpscript.php?someparameter[][

it causes apache child failure

Reproduce code:
---------------
http://www.somesite.com/somephpscript.php?someparameter[][

Expected result:
----------------
normal response

Actual result:
--------------
segmentation fault

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-10-18 17:08 UTC] tony2001@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sat Sep 26 12:00:01 2026 UTC