fix bug #30442 ( segmentation fault when parsing ?getvariable[][ )